--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -16,7 +16,6 @@
     font-weight: 700;
     position: relative;
 
-
     &.sub {
       letter-spacing:0.2em; 
       font-size: 10px !important;
@@ -190,8 +189,8 @@
     }
 
     .ml12 {
-      font-size: 1.2rem;
-      letter-spacing: .6rem;
+      font-size: .9rem;
+      letter-spacing: .5rem;
     }
     h1 {
       font-size: 1.5rem;
